Finished isolating Kroger source, created centralize ingestion infrastructure in fdp_core and added distributed lock/quota/raw payload services.